# greet-mcp

./: .mcp.json  Cargo.toml  README.md  pyproject.toml
cli/: start_server.py
python/greet_mcp/: __init__.py  greet_mcp.pyi
src/: lib.rs
