[package]
name = "greet-mcp"
version = "0.1.0"
edition = "2024"

[lib]
name = "greet_mcp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26.0", features = ["anyhow", "extension-module"] }
pyo3-async-runtimes = { version = "0.26", features = ["attributes", "tokio-runtime"] }
anyhow = "1.0.100"
rmcp = { version = "0.8.1", features = ["server", "transport-io"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }

